Fixed bug #60887 (SoapClient ignores user_agent option and sends no User-Agent header)